--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,16 +1,13 @@
 ---
 driver_plugin: vagrant
+driver_config:
+  require_chef_omnibus: latest
+
 platforms:
 - name: ubuntu-12.04
-  driver_config:
-    box: opscode-ubuntu-12.04
-    box_url: https://opscode-vm.s3.amazonaws.com/vagrant/boxes/opscode-ubuntu-12.04.box
   run_list:
   - recipe[apt]
 - name: ubuntu-10.04
-  driver_config:
-    box: opscode-ubuntu-10.04
-    box_url: https://opscode-vm.s3.amazonaws.com/vagrant/boxes/opscode-ubuntu-10.04.box
   run_list:
   - recipe[apt]
 - name: centos-6.3
@@ -38,3 +35,7 @@ suites:
       plugins:
       - load
       - df
+- name: client_graphite
+  run_list:
+  - recipe[collectd::client_graphite]
+  - recipe[minitest-handler]
