--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,5 +1,8 @@
 ---
 driver_plugin: vagrant
+driver_config:
+  require_chef_omnibus: latest
+
 platforms:
 - name: ubuntu-12.04
   driver_config:
@@ -29,6 +32,7 @@ suites:
 - name: default
   run_list:
   - recipe[collectd]
+  - recipe[minitest-handler]
   attributes: {}
 - name: databag
   run_list:
